view/theme/frio/css/style.css
/*
 * SPDX-FileCopyrightText: 2010-2024 the Friendica project
 *
 * SPDX-License-Identifier: AGPL-3.0-or-later
 */

/*
    Created on : 17.02.2016, 23:55:45
    Author     : rabuzarus and contributors
*/

body {
	padding-top: 110px;
	background-color: $background_color;
	background-image: url("$background_image");
	background-size: $background_size_img;
	background-repeat: $background_repeat;
	background-attachment: fixed;
	color: $font_color;
	font-family: "Open Sans", sans-serif;
}
body.minimal {
	padding: 15px;
}

body a {
	color: $link_color;
	text-decoration: none;
}
/* Anchors incorrectly display with a fixed top menu. This global rule offsets all
 * anchors so that accessing them with a # link will actually scroll the associated
 * content in the visible part of the page.
 *
 * anchor.top should be the opposite of body.padding-top
 */
body a[name]:not([href]) {
	display: block;
	position: relative;
	top: -110px;
	visibility: hidden;
}

body a:hover,
.btn-link:hover,
body a:focus,
.btn-link:focus,
body a:active,
.btn-link:active,
body a.active,
.btn-link.active {
	color: $link_hover_color;
	outline-color: $link_hover_color;
	text-decoration: none;
}

.wall-item-container a:hover {
	text-decoration: underline;
}

hr {
	margin-top: 10px;
	margin-bottom: 10px;
}
aside hr,
section hr {
	border-color: rgba(238, 238, 238, $contentbg_transp);
}
iframe.embed,
.video-top-wrapper,
video {
	max-width: 100%;
	max-height: calc(100vh - 260px);
}
blockquote {
	font-size: inherit;
}
textarea.text-autosize {
	/* The JS autoresizing lib autosize appears to lock vertical resizing because I guess it may conflict with it.
	 * This leaves horizontal resizing but that generally is less useful and it frequently breaks the layout.
	 * So fully disable resizing for textareas until we replace this lib with CSS field-sizing
	 * */
	resize: none;
}
.clear {
	clear: both;
}
.no-padding {
	padding: 0;
}
.fakelink {
	cursor: pointer;
}
.btn.btn-link.fakelink {
	box-shadow: none;
	padding: 0 2px;
	vertical-align: baseline;
	outline-offset: 0;
}

.hidden {
	display: none !important;
}
.minimize {
	max-height: 0px !important;
	overflow: hidden !important;
}
.inflated {
	display: none;
}

/**
 * details tag
 */
details {
	padding: .5em .5em 0;
}
details details {
	padding-left: .5em;
}
details summary {
	font-weight: bold;
	display: list-item;
}

/**
 * clickable table rows
 */
.table > tbody > td[role="button"] {
	cursor: pointer;
}

/**
 * mobile aside
 */
@media screen and (max-width: 990px) {
	body {
		padding-top: 105px;
	}
	aside {
		position: fixed !important;
		top: 0 !important;
		background-color: $background_color;
		width: 100%;
		max-width: 300px;
		height: 100%;
		padding-top: 100px;
		z-index: 10;
		overflow: auto;
		padding-left: 6px !important;
		padding-right: 6px !important;
	}
	aside::before {
		content: " ";
		position: fixed;
		display: block;
		top: 0;
		left: 300px;
		right: 0;
		bottom: 0;
		background-color: rgba(0, 0, 0, 0.4);
		opacity: 0;
		transition: opacity 0.5s;
	}
	aside.canvas-slid::before {
		opacity: 1;
	}

	/* prevent page scroll when the aside is opened **/
	body.aside-out {
		overflow: hidden;
	}
	/* More space for the search field */
	#topbar-first .container {
		padding-left: 0;
		padding-right: 0;
	}
}
/*
* standard page elements
*/

#back-to-top {
	display: none;
	cursor: pointer;
	color: $nav_icon_color;
	position: fixed;
	z-index: 49;
	right: 20px;
	bottom: 20px;
	opacity: 1;
	font-size: 2.9em;
	padding: 0 12px 0 12px;
	border-radius: 10px;
	background-color: $nav_bg;
	line-height: 1.5;
}

#item-delete-selected {
	cursor: pointer;
	color: white;
	position: fixed;
	z-index: 49;
	right: 20px;
	top: 100px;
	opacity: 0.8;
	font-size: 2.9em;
	padding: 0 12px 0 12px;
	border-radius: 10px;
	background-color: $link_color;
	line-height: 1.5;
	display: none;
}

#toggle_mobile_link {
	display: none;
}

#confirm-message {
	margin-bottom: 30px;
}

#confirm-form .settings-submit-wrapper {
	margin-bottom: 0;
}

/*
* Overwriting and Extend Bootstrap
*/
.label,
.label a {
	color: #fff;
}

/* Buttons */

.btn {
	float: none;
	border: none;
	-webkit-box-shadow: none;
	box-shadow: none;
	-moz-box-shadow: none;
	background-image: none;
	text-shadow: none;
	border-radius: 3px;
	margin-bottom: 0;
	margin-top: 2px;
	font-size: 14px;
	font-weight: 600;
	padding: 8px 16px;
	color: inherit;
}
.btn:focus {
	outline-color: $link_hover_color;
}

.btn-default {
	background: #ededed;
	color: $font_color;
}
.btn-sm {
	padding: 4px 8px;
	font-size: 12px;
}
.btn-small {
	padding: 6px 10px;
	font-size: 12px;
	line-height: 1.5;
	border-radius: 3px;
}
.btn-xs {
	padding: 1px 5px;
	font-size: 12px;
}
.btn.btn-danger {
	color: #ffffff;
	background-color: #ae0f0f;
}

.btn.btn-primary {
	background: $nav_bg;
	color: $btn_primary_color;
}
.btn.btn-primary:hover,
.btn.btn-primary:focus {
	color: $btn_primary_color;
	background: $btn_primary_hover_color;
	text-decoration: none;
}
.btn.btn-primary:active,
.btn.btn-primary.active {
	background: $btn_primary_hover_color;
}

.btn-primary.active.focus,
.btn-primary.active:focus,
.btn-primary.active:hover,
.btn-primary:active.focus,
.btn-primary:active:focus,
.btn-primary:active:hover,
.open > .dropdown-toggle.btn-primary.focus,
.open > .dropdown-toggle.btn-primary:focus,
.open > .dropdown-toggle.btn-primary:hover,
.btn-primary.active,
.btn-primary:active,
.open > .dropdown-toggle.btn-primary {
	background: $btn_primary_hover_color;
	border-color: none;
}

.btn-link {
	border: 0;
	color: $link_color;
	padding-left: 0;
	padding-right: 0;
}
.btn-clear,
.btn-clear:active {
	border: 0;
	background: transparent;
	box-shadow: none;
}
.btn-eventnav,
btn-eventnav:hover {
	font-size: 16px;
	background: none;
	background-color: transparent;
	padding: 0 14px;
}
.btn-separator {
	border-left: 1px solid #777;
}

.toggle.btn {
	border: 1px solid transparent;
}
.toggle.btn-xs {
	min-width: 45px;
}
.toggle.off {
	border-color: #ccc;
}
/* ... */

